# WARG-Sim

./: .gitignore  .gitmodules  LICENSE  README.md
Arduino/main/: Altmeter.cpp  Altmeter.h  IMU.cpp  IMU.hpp  RCReceiver.cpp  RCReceiver.h  main.ino
Arduino/main.ino/: main.ino.ino
gazebo/plugins/: ArduinoComms.cc  ArduinoComms.hh  CMakeLists.txt  CessnaPlugin.cc  LiftDragPlugin.cc  WargSimulator.cc  hello_model.cc  hello_world.cc
gazebo/plugins/cmake/Modules/: FindLibSerial.cmake
gazebo/world/: WARG_WORLD.world
